# llm-eval-framework

./: .dockerignore  .env.example  .gitignore  API_DOCS.md  ARCHITECTURE.md  Dockerfile  PERFORMANCE_ANALYSIS.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  evaluation.yml
benchmarks/: rag_benchmark.jsonl
examples/: config.json  config.local.yaml  config.yaml  judge_config.yaml  model_a_outputs.jsonl
examples/models/: model_a_outputs.jsonl  model_b_outputs.jsonl
src/llm_eval/cli/: main.py
src/llm_eval/config/: judge_schema.py  loader.py  schema.py  validator.py
src/llm_eval/core/: base_metric.py  dataset.py  evaluator.py  metric_factory.py  registry.py
src/llm_eval/judge/: client.py  judge.py  metric.py  prompt.py
src/llm_eval/metrics/: reference.py
src/llm_eval/plugins/: __init__.py  length_metric.py
src/llm_eval/rag/: metrics.py
src/llm_eval/reporting/: aggregate.py  writers.py
src/llm_eval/utils/: logger.py  silence.py
src/llm_eval/visualization/: plots.py
tests/integration/: test_cli_run.py  test_cli_smoke.py  test_pipeline.py  test_pipeline_with_judge.py
tests/unit/: test_config.py  test_config_loader.py  test_judge_internals.py  test_judge_metric.py  test_logger.py  test_plugin_metric.py  test_rag_metrics.py  test_reference_metrics.py  test_reporting.py  test_visualizations.py
